[package]
name = "cryptoooor"
version = "0.1.0-alpha"
authors = ["Esaü Bukasa <esaubukasa@protonmail.com>"]
edition = "2021"
description = "cryptoooor: a simple file encryption tool using AES-GCM and Scrypt."
license = "MIT"
repository = "https://github.com/pindjouf/cryptoooor"
readme = "README.md"
keywords = ["encryption", "AES", "Scrypt", "file encryption", "security"]

[dependencies]
aes-gcm = "0.10.3"
bincode = "1.3.3"
clap = { version = "4.5.17", features = ["derive"] }
indicatif = "0.17.8"
patharg = "0.4.0"
rprompt = "2.1.1"
scrypt = "0.11.0"
typenum = "1.17.0"
